tests/language_tests/pass/0027_trailing_comment_after_statement.ee
fn main() {
    print(5); // trailing comment after statement
}
