tests/language_tests/fail/0077_invalid_string_escape.ee
fn main() {
    print("bad\q");
}
